[gd_scene load_steps=10 format=3 uid="uid://brgs56fwbqqrl"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_xje8w"]
[ext_resource type="Script" path="res://scripts/nodes/StateMachine.gd" id="2_pmby7"]
[ext_resource type="Script" path="res://scripts/states/floating.gd" id="3_0evvi"]
[ext_resource type="Script" path="res://scripts/states/grabbing_wall.gd" id="4_6g4pv"]
[ext_resource type="PackedScene" uid="uid://c1llnrlyyi0kq" path="res://scenes/direction_indicator.tscn" id="5_crudb"]
[ext_resource type="Script" path="res://scripts/direction_indicator.gd" id="6_83ek6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n8xm5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f6s8k"]
albedo_color = Color(0.6974, 0.417633, 0.338003, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7wf5q"]
material = SubResource("StandardMaterial3D_f6s8k")

[node name="Character" type="CharacterBody3D"]
script = ExtResource("1_xje8w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_n8xm5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7wf5q")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_pmby7")
initial_state = NodePath("Floating")

[node name="Floating" type="Node" parent="StateMachine"]
script = ExtResource("3_0evvi")

[node name="GrabbingWall" type="Node" parent="StateMachine"]
script = ExtResource("4_6g4pv")

[node name="TopCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)

[node name="IsoCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 7.1, 7.1)

[node name="DirectionIndicator" parent="." instance=ExtResource("5_crudb")]
script = ExtResource("6_83ek6")
